# styleforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  amd_hackathon_readme.md  pyproject.toml
docs/: index.html
eval/: judge_eval.py  judge_v2.py  make_eval_set.py  tuned_generate.py
frontend/: package-lock.json  package.json  server.js
frontend/public/: index.html  results.json
io/input/: tasks.json
presentation/: StyleForge.pptx  VIDEO_SCRIPT.md  allgemma_run.json
scripts/: make_test_clip.sh
src/styleforge/: __init__.py  cli.py  config.py  costs.py  fw.py  harness.py  ingest.py  judge.py  local_gemma.py  perception.py  pipeline.py  stylize.py
tests/: conftest.py  test_integration.py  test_unit.py
training/: RUNBOOK.md  build_pairs.py  gen_data.py  merge_and_quantize.py  run_on_amd.sh  train_dpo.py
