[project]
name = "styleforge"
version = "0.1.0"
description = "StyleForge: judge-optimized four-style video captioner — AMD Hackathon ACT II, Track 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13",
    "faster-whisper>=1.0",
]

[project.scripts]
styleforge = "styleforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/styleforge"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
